tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.stderr
error[E0271]: type mismatch resolving `<SQLiteValue<'_> as SQLParam>::DialectMarker == PostgresDialect`
  --> tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.rs:13:13
   |
13 |     let _ = cast::<_, _, drizzle::sqlite::types::Integer>(user.name, drizzle::sqlite::types::Integer);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PostgresDialect`, found `SQLiteDialect`
